Fix team name overflow in table

--- a/web/static/css/main.css
+++ b/web/static/css/main.css
@@ -209,3 +209,7 @@ a:hover {
 .question-description-game-modal {
   text-align: left;
 }
+
+#table-name {
+  white-space: nowrap;
+}
